--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: SavoyLIN@gmail.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog"
-url: "http://savoylin.github.io/"          # your host, for absolute URL
+url: "https://savoylin.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
