--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ sidebar-avatar: /img/avatar-m.jpg      # use absolute URL, seeing it's used in b
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+# weibo_username:     NO
+zhihu_username:     NO
+github_username:    NO
+facebook_username:  NO
+jianshu_username:   NO
+#twitter_username:   NO
 
 
 
